new portfolio set up

--- a/cv.html
+++ b/cv.html
@@ -28,19 +28,25 @@
             <div>
                 <h3>Contact</h3>
                 <p>
-                    Currently based in: Berlin
-                    <br>Email: <a href="Mailto:Zeina.m.saade@gmail.com">zeina.m.saade@gmail.com</a>
-                    <br>Telegram: <a href="https://t.me/Zanzouneto">Zanzouneto</a>
+                    Based in Kyiv, Ukraine
+                    <br>Email: <a target="_blank" href="Mailto:Zeina.m.saade@gmail.com">zeina.m.saade@gmail.com</a>
+                    <br>Telegram: <a target="_blank" href="https://t.me/Zanzouneto">Zanzouneto</a>
                     <br>Mobile: +380684330020
                 </p>
                 <h3>Social</h3>
                 <p>
-                    <a href="https://www.instagram.com/zanzouneto">Instagram: Zanzouneto</a> 
-                    <br>Linkedin<a href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>   
-                    <br><a href="https://github.com/zanzouneto">Github: Zanzouneto</a>         
+                    Instagram: <a target="_blank" href="https://www.instagram.com/zanzouneto">Zanzouneto</a> 
+                    <br>Linkedin: <a target="_blank" href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>   
+                    <br>Github: <a target="_blank" href="https://github.com/zanzouneto"> Zanzouneto</a>         
                 </p>
             </div>
         </div>
+        <p>
+            <h3>💙💛:</h3>
+            <br>Webmaster at: <a target="_blank" href="help99.co">HELP99</a>
+            <br>Webmaster at: <a target="_blank" href="https://www.missionforukraine.org/">Mission for Ukraine</a>
+            <br><br>
+        </p>
         <details open="">
             <summary>Executive summary:</summary>
             <div class="indented">
@@ -79,7 +85,7 @@
                 <div class="grid">
                     <div>
                         <p>
-                            Web development (on Webflow)
+                            Web development
                             <br>Web design
                             <br>Graphic Design
                             <br>Event management 
@@ -90,11 +96,10 @@
                         <p>
                             Languages:
                             <ul class="bulleted-list">
+                                <li>English: Native</li>
                                 <li>Arabic: Native</li>
-                                <li>English: Fluent</li>
                                 <li>Russian: Conversational</li>
                                 <li>Ukrainian: Basic</li>
-                                <li>Currently learning German</li>
                         </p>
                     </div>
                 </div>
@@ -190,7 +195,7 @@
         <h2>Experience:</h2>
         <!-- Job entry -->
         <div>
-            <h2>→ <a href="https://zbuzz.webflow.io/">ZBUZZ</a> - Founder</h2>
+            <h2>→ <a target="_blank" href="https://zbuzz.webflow.io/">ZBUZZ</a> - Founder</h2>
             <p>Feb 2018 - Feb 2021 / Full time</p>
             <div class="job-tags">
                 <p>Tags:</p>
@@ -209,11 +214,11 @@
                 Before I opened the workshop I handled the construction in the site which was a challenge of its own. 
                 It was a solo mission, I was doing everything myself. It was a very experimental and educational project. While it didn’t reach a very profitable stage, I still had to get to better understand marketing, sales, social media.. and everything that was outside of the scope of what I was focused on before.
             </p>
-            <a href="https://www.instagram.com/ZbuzzDesigns/">Instagram page→</a>
+            <a target="_blank" href="https://www.instagram.com/ZbuzzDesigns/">Instagram page→</a>
         </div>
         <!-- Job entry -->
         <div>
-            <h2>→ <a href="http://lift99-dao.webflow.io/">LIFT99 DAO</a> - Project Lead</h2>
+            <h2>→ <a target="_blank" href="http://lift99-dao.webflow.io/">LIFT99 DAO</a> - Project Lead</h2>
             <p>Jul 2022 - April 2023 / full time</p>
             <div class="job-tags">
                 <p>Tags:</p>
@@ -229,7 +234,7 @@
         </div>
         <!-- Job entry -->
         <div>
-            <h2>→ <a href="http://help99.co/">Help99</a> - All thing web</h2>
+            <h2>→ <a target="_blank" href="http://help99.co/">Help99</a> - All thing web</h2>
             <p>Feb 24th 2022 - ongoing / part time volunteer</p>
             <div class="job-tags">
                 <p>Tags:</p>
@@ -243,7 +248,7 @@
         </div>
         <!-- Job entry -->
         <div>
-            <h2>→ <a href="https://www.coachesforukraine.com/">Coaches for Ukraine</a> - Event coordination & web development</h2>
+            <h2>→ <a target="_blank" href="https://www.coachesforukraine.com/">Coaches for Ukraine</a> - Event coordination & web development</h2>
             <p>Feb 24th 2022 - ongoing / part time volunteer</p>
             <div class="job-tags">
                 <p>Tags:</p>
@@ -259,7 +264,7 @@
         </div>
         <!-- Job entry -->
         <div>
-            <h2>→ <a href="https://www.lift99.co/">LIFT99 Kyiv Hub</a> - Hub manager</h2>
+            <h2>→ <a target="_blank" href="https://www.lift99.co/">LIFT99 Kyiv Hub</a> - Hub manager</h2>
             <p>Oct 2021 - Jul 2022 / full time</p>
             <div class="job-tags">
                 <p>Tags:</p>
@@ -271,7 +276,7 @@
                 </ul>
             </div>
             <p>LIFT99 is a startup community hub. As a hub manager I focused on improving the physical space. But since it was a community hub run by a small team, it was everyone’s priority to harbor a community vibe on the day-to-day and through events. 
-                <br>I was also part of the team working on developing an <a href="https://lift99-hr.webflow.io/"> HR platform</a> to match startups with talents, my role included web design, web implementation, user experience… 
+                <br>I was also part of the team working on developing an <a target="_blank" href="https://lift99-hr.webflow.io/"> HR platform</a> to match startups with talents, my role included web design, web implementation, user experience… 
                 <br>I was working at LIFT99 when Russia invaded Ukraine, it was at that time when we shifted our focus to make sure members of our community were safe. Quickly after we launched multiple projects to help Ukrainians, the Ukrainian army, and projects to support small businesses, entrepreneurs & founders of Ukraine. All under the banner of Helpp99.
             </p>
         </div>
@@ -293,7 +298,7 @@
         <div>
             <h2>→ Freelancing:</h2>
             <p>For a while I worked as a freelance graphic designer on many projects with many companies, NGOs & individuals.</p>
-            <p>Clients that I worked most with during that time:<a href="https://www.facebook.com/Angelic-Association-of-Anis-Saade-%D8%AC%D9%85%D8%B9%D9%8A%D8%A9-%D8%A3%D9%86%D9%8A%D8%B3-%D8%B3%D8%B9%D8%A7%D8%AF%D8%A9-%D8%A7%D9%84%D9%85%D9%84%D8%A7%D8%A6%D9%83%D9%8A%D8%A9-1638116516441275/?wtsid=rdr_0rpxEGzlmzXmg93DI">AAAS</a>, <a href="https://aazleonardite.com/">AAZ Leonardite</a>, <a href="https://kalyanchik.ua/">Kalyanchik</a>, <a href="https://autolux.ua/">Autolux</a>, <a href="https://aaz.company/uk/">AAZ trading company</a>, <a href="https://l.instagram.com/?u=http%3A%2F%2Fwww.artbayofscandinavia.com%2F%3Ffbclid%3DPAAaZAJ-oB7ICdyK07yjmV2Bas19aecjnSMD8lsCssA5qNAr3LyUo3iUTFpOs_aem_AcaeIenI3q2w5R0kNxZz5pX9qC0_JDPABWUhqIniRd13tak-KfvxdkRDM8aZ-mO3Sr8&amp;e=AT1Wmv3_AawJ12ZjlK07j8J8rfF-tU_Adb3tUMCPZfpwToDVQc44swZv39qwhdlbyRyuLSK4FW0bNnYTBUTCbaC6SiYe76DIGVJtHLQKFeExjTt_9eIM">Art Bay of Scandinavia</a>, SkyLux Avia, Walid Yamout Sports, Middle Litoral….</p>
+            <p>Clients that I worked most with during that time:<a target="_blank" href="https://www.facebook.com/Angelic-Association-of-Anis-Saade-%D8%AC%D9%85%D8%B9%D9%8A%D8%A9-%D8%A3%D9%86%D9%8A%D8%B3-%D8%B3%D8%B9%D8%A7%D8%AF%D8%A9-%D8%A7%D9%84%D9%85%D9%84%D8%A7%D8%A6%D9%83%D9%8A%D8%A9-1638116516441275/?wtsid=rdr_0rpxEGzlmzXmg93DI">AAAS</a>, <a target="_blank" href="https://aazleonardite.com/">AAZ Leonardite</a>, <a target="_blank" href="https://kalyanchik.ua/">Kalyanchik</a>, <a target="_blank"ref="https://autolux.ua/">Autolux</a>, <a target="_blank"ref="https://aaz.company/uk/">AAZ trading company</a>, <a target="_blank" ref="https://l.instagram.com/?u=http%3A%2F%2Fwww.artbayofscandinavia.com%2F%3Ffbclid%3DPAAaZAJ-oB7ICdyK07yjmV2Bas19aecjnSMD8lsCssA5qNAr3LyUo3iUTFpOs_aem_AcaeIenI3q2w5R0kNxZz5pX9qC0_JDPABWUhqIniRd13tak-KfvxdkRDM8aZ-mO3Sr8&amp;e=AT1Wmv3_AawJ12ZjlK07j8J8rfF-tU_Adb3tUMCPZfpwToDVQc44swZv39qwhdlbyRyuLSK4FW0bNnYTBUTCbaC6SiYe76DIGVJtHLQKFeExjTt_9eIM">Art Bay of Scandinavia</a>, SkyLux Avia, Walid Yamout Sports, Middle Litoral….</p>
         </div>
         <!-- Job entry -->
         <div>
@@ -318,7 +323,7 @@
                     <li>Lecturing</li>
                 </ul>
             </div>
-            <h3>→ <a href="https://www.facebook.com/InternationalMafiaClub">International Mafia Club</a></h3>
+            <h3>→ <a target="_blank" href="https://www.facebook.com/InternationalMafiaClub">International Mafia Club</a></h3>
             <p>Over a period of about 2 years I organized a community of expats in Ukraine with a weekly meeting over a game of Mafia. The community included over 700 members on Facebook (approx 15% monthly active members). Weekly show up was anywhere between 15 and 40 depending on the week, a combination of regulars and new comers. Tasks included:</p>
             <ul class="bulleted-list">
                 <li>Social media management.</li>
@@ -327,7 +332,7 @@
                 <li>Photographing and sharing pictures of the events.</li>
                 <li>Venue negotiations.</li>
             </ul>
-            <h3>→ <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02Q9eXSZgoJAJ21i8M3RyNymLT9reonqteij4hthgDiJnfSnFSYsZHBmiyvZdFKMzHl&id=100064734367236&comment_id=294095520146436&notif_id=1696792576379619&notif_t=feed_comment_reply&ref=notif">Adobe AI Masterclass:</a></h3>
+            <h3>→ <a target="_blank" href="https://www.facebook.com/permalink.php?story_fbid=pfbid02Q9eXSZgoJAJ21i8M3RyNymLT9reonqteij4hthgDiJnfSnFSYsZHBmiyvZdFKMzHl&id=100064734367236&comment_id=294095520146436&notif_id=1696792576379619&notif_t=feed_comment_reply&ref=notif">Adobe AI Masterclass:</a></h3>
             <p>2023
                 <br>I lead an adobe illustrator masterclass totaling in 15 hours with 20 participants.
             </p>
