--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Active Mode project</title>
+    <meta name="description" content="App design with full set of icon design for Active Mode, a sport social media platform.">
+    <meta name="keywords" content="freelance graphic design, freelance app design, app design, logo design, freelance logo dsesign, app design">  
     <script src="../elements.js"></script>
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
