--- a/website.html
+++ b/website.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Websites</title>
+    <meta name="description" content="Professional freelance web design services tailored to your needs.">
+    <meta name="keywords" content="freelance graphic design, freelance web design, web design, web building, freelance web project">  
     <script src="elements.js" defer></script>
     <header-links></header-links>
     <link rel="stylesheet" href="styles.css">
@@ -33,58 +35,58 @@
             <p>Need a web design / development? Lets mak it happen</p>
         </a>
         <div class="website-div">   
-            <img class="project-img web" rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;">  
-            <img class="project-img phone" rel="preload" loading="eager" src="assets/hr phone.png" style="background: #253946d1;">  
+            <img class="project-img web" rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
+            <img class="project-img phone" rel="preload" loading="eager" src="assets/hr phone.png" style="background: #253946d1;" alt="web design project for an HR company">  
             <a class="morebutton" href="project/lift99-hr.html">Check it out -></a>   
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;">
-            <img class="project-img phone" loading="lazy" src="assets/zbuzz phone.png" style="background: #9d9d9db4;">
+            <img class="project-img web" loading="lazy" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+            <img class="project-img phone" loading="lazy" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
             <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy" src="assets/DAO-min.png" style="background: #311742d6;">
-            <img class="project-img phone" loading="lazy" src="assets/DAO phone.png" style="background: #311742d6;">
+            <img class="project-img web" loading="lazy" src="assets/DAO-min.png" style="background: #311742d6;" alt="web design project for a web3 project">
+            <img class="project-img phone" loading="lazy" src="assets/DAO phone.png" style="background: #311742d6;" alt="web design project for a web3 project">
             <a class="morebutton" href="project/lift99-dao.html">Check it out -></a>
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
-            <img class="project-img phone" loading="eager" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;">
+            <img class="project-img web" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;" alt="web design project for a coaching project">
+            <img class="project-img phone" loading="eager" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;" alt="web design project for a coaching project">
             <a class="morebutton" href="project/coaching.html">Check it out -></a>   
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
-            <img class="project-img phone" loading="lazy"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+            <img class="project-img web" loading="lazy"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
+            <img class="project-img phone" loading="lazy"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
             <a class="morebutton" href="project/help99.html">Check it out -></a>   
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy"  src="assets/UA 911.png" style="background-color: #253946dc;">
-            <img class="project-img phone" loading="lazy"  src="assets/911 phone.png" style="background-color: #253946dc;">
+            <img class="project-img web" loading="lazy"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
+            <img class="project-img phone" loading="lazy"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
             <a class="morebutton" href="project/ua911.html">Check it out -></a>   
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy" src="assets/M4U web projectr cover.jpg" style="background: white;">
-            <img class="project-img phone" loading="lazy" src="assets/M4U phone cover.png" style="background: white;">
+            <img class="project-img web" loading="lazy" src="assets/M4U web projectr cover.jpg" style="background: white;" alt="web design project for a non-profit organisation">
+            <img class="project-img phone" loading="lazy" src="assets/M4U phone cover.png" style="background: white;" alt="web design project for a non-profit organisation">
             <a class="morebutton" href="project/mission-for-ukraine.html">Check it out -></a>
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
-            <img class="project-img phone" loading="lazy"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+            <img class="project-img web" loading="lazy"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
+            <img class="project-img phone" loading="lazy"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
             <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;">
-            <img class="project-img phone" loading="lazy"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;">
+            <img class="project-img web" loading="lazy"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
+            <img class="project-img phone" loading="lazy"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
             <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="eager" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
-            <img class="project-img phone" loading="eager" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
+            <img class="project-img web" loading="eager" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;"  alt="web design project for an artist, a painter">
+            <img class="project-img phone" loading="eager" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;"  alt="web design project for an artist, a painter">
             <a class="morebutton" href="project/pilar-elias-art.html">Check it out -></a>
         </div>
         <div class="website-div">
-            <img class="project-img web" loading="lazy" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
-            <img class="project-img phone" loading="lazy"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+            <img class="project-img web" loading="lazy" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);"  alt="web design project for an art collector">
+            <img class="project-img phone" loading="lazy"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);"  alt="web design project for an art collector">
             <a class="morebutton" href="project/artbay.html">Check it out -></a>
         </div>
     </div>
