--- a/logo.html
+++ b/logo.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logo designs</title>
+    <meta name="description" content="Professional freelance graphic and web design services tailored to your needs.">
+    <meta name="keywords" content="freelance graphic design, logo design, logo designer">  
     <script src="elements.js" defer></script>
     <header-links></header-links>
     <link rel="stylesheet" href="styles.css">
@@ -33,7 +35,7 @@
             <div class="center-all">
                 <div class="logo-main-div">
                     <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
-                        <img class="logo-img" rel="preload" loading="eager" src="assets/active mode logo.png">
+                        <img class="logo-img" alt="Custom logo design featuring geometric icon of the AM initials and bold typography for ActiveMode" rel="preload" loading="eager" src="assets/active mode logo.png">
                         <!-- <a class="morebutton" href="project/active-mode.html">Check it out -></a> -->
                     </div>
                     <div>
@@ -43,70 +45,70 @@
                         </a>
                     </div>
                     <div class="logo-div" style="background-color: #1C1D1D;">
-                        <img class="logo-img" loading="lazy" src="assets/zbuzz logo.png">
+                        <img class="logo-img" alt="Custom logo design with fluid typography for ZBUZZ" loading="lazy" src="assets/zbuzz logo.png">
                         <!-- <a class="morebutton" href="project/zbuzz.html">Check it out -></a> -->
                     </div>
                     <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
-                        <img class="logo-img" loading="lazy" src="assets/m4u logo.png">
+                        <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the MU initials and bold typography for Mission 4 Ukraine" loading="lazy" src="assets/m4u logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/middle litoral logo.png">
+                        <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the ML initials and bold typography for Middle Litoral, logo in Arabic and English" loading="lazy" src="assets/middle litoral logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Gallivanters\ log\ logo\ bg-min.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/galivanter log logo highlighted.png" style="max-width: 500px;">
+                        <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log" loading="lazy" src="assets/galivanter log logo highlighted.png" style="max-width: 500px;">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Tottaly\ jasmine\ logo\ bg-min.jpg);">
-                        <img class="logo-img" loading="eager" src="assets/totally jasmin logo.png">
+                        <img class="logo-img" alt="Totally Jasmin logo design with a flower icon" loading="eager" src="assets/totally jasmin logo.png">
                     </div>
                     <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
-                        <img class="logo-img" loading="lazy" src="assets/depo logo.png">
+                        <img class="logo-img" alt="Custom logo design featuring abstract geometric typography for DEPO" loading="lazy" src="assets/depo logo.png">
                     </div>
                     <div class="logo-div" style="background: #FFFCF3;">
-                        <img class="logo-img" loading="lazy" src="assets/jaz logo.png">
+                        <img class="logo-img" alt="JAZ logo design featuring a geometric backdrop and bold typography" loading="lazy" src="assets/jaz logo.png">
                     </div>
                     <div class="logo-div" style="background-color: #FFDE17;">
-                        <img class="logo-img" loading="lazy" src="assets/walid logo.png">
-                    </div>
+                        <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the WY initials for Walid Yamout Sports Events" loading="lazy" src="assets/walid logo.png">
+                    </div> 
                     <div class="logo-div" style="background-image: url(assets/Kafroun\ paragliding\ logo\ bg-min.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/paragliding logo.png">
+                        <img class="logo-img" alt="paragliding logo design in Arabic text" loading="lazy" src="assets/paragliding logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/emuse logo.png">
+                        <img class="logo-img" alt="Logo design for EMUSE, minimalistic typographical logo" loading="lazy" src="assets/emuse logo.png">
                     </div>
                     <div class="logo-div" style="background: #F8F5F1;">
-                        <img class="logo-img" loading="lazy" src="assets/aaz leonardite logo.png">
+                        <img class="logo-img" alt="Logo design with icon of AAZ initials for a fertilizer" loading="lazy" src="assets/aaz leonardite logo.png">
                         <!-- <a class="morebutton" href="project/Leonardite.html">Check it out -></a> -->
                     </div>
                     <div class="logo-div" style="background: #D7EBF2;">
-                        <img class="logo-img" loading="lazy" src="assets/keenel logo.png">
+                        <img class="logo-img" alt="Wolffeels Kennel logo design with a dog icon" loading="lazy" src="assets/keenel logo.png">
                     </div>
                     <div class="logo-div" style="background-color: #FDED1C;">
-                        <img class="logo-img" loading="lazy" src="assets/skylux avia logo.png">
+                        <img class="logo-img" alt="SkyLux Avia logo design for an airline company" loading="lazy" src="assets/skylux avia logo.png">
                     </div>
                     <div class="logo-div" style="background: #FFF;">
-                        <img class="logo-img" loading="lazy" src="assets/sudoculus logo.png">
+                        <img class="logo-img" alt="sudoculus logo design for a math game" loading="lazy" src="assets/sudoculus logo.png">
                         <!-- <a class="morebutton" href="project/sudoculus.html">Check it out -></a> -->
                     </div>
                     <div class="logo-div" style="background-color: #1D315C;">
-                        <img class="logo-img" loading="lazy" src="assets/aaz trading co logo.png">
+                        <img class="logo-img" alt="Logo design with an icon of AAZ initials" loading="lazy" src="assets/aaz trading co logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Charm\ of\ the\ elements\ logo\ bg-min.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/charm of  the elements logo.png">
+                        <img class="logo-img" alt="Charm of the elements logo design, minimalistic logo" loading="lazy" src="assets/charm of  the elements logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/amal logo.png">
+                        <img class="logo-img" alt="Charity logo design in Arabic letters" loading="lazy" src="assets/amal logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/angelic\ assosiation\ of\ anis\ saade\ logo\ bg-min.jpg); background-color: #D7EBF2;">
-                        <img class="logo-img" loading="lazy" src="assets/aaas logo.png">
+                        <img class="logo-img" alt="Charity logo design in Arabic and English" loading="lazy" src="assets/aaas logo.png">
                     </div>
                     <div class="logo-div" style="background: #FFFCF3;">
-                        <img class="logo-img" loading="lazy" src="assets/zbowls logo.png">
+                        <img class="logo-img" alt="Z Bowls Logo design" loading="lazy" src="assets/zbowls logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Golden\ dynasty\ logo\ bg-min.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/golden dynasty logo.png">
+                        <img class="logo-img" alt="Golden dynasty logo deisng with stylised arabic letters as an icon" loading="lazy" src="assets/golden dynasty logo.png">
                     </div>
                     <div class="logo-div" style="background-image: url(assets/Katia\ G\ Saade\ logo\ bg-min.jpg);">
-                        <img class="logo-img" loading="lazy" src="assets/katia g saade logo.png">
+                        <img class="logo-img" alt="Katia G Saade logo design for an architect" loading="lazy" src="assets/katia g saade logo.png">
                     </div>
                 </div>
             </div>
