--- a/project/coaching.html
+++ b/project/coaching.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coaching 4 UA project</title>
+    <meta name="description" content="web design project for a coaching project.">
+    <meta name="keywords" content="freelance graphic design, freelance web design, web design, web building, freelance web project">  
     <script src="../elements.js"></script>
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
