--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,8 @@
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
-                        <img class="project-img web" loading="lazy" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
-                        <img class="project-img phone" loading="lazy" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img web" loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img phone" loading="eager" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
                         <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>   
@@ -52,13 +52,13 @@
                         <a class="morebutton" href="project/active-mode.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" loading="lazy"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
-                        <img class="project-img phone" loading="lazy"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
+                        <img class="project-img web" loading="eager"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
+                        <img class="project-img phone" loading="eager"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
                         <a class="morebutton" href="project/help99.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" loading="lazy"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
-                        <img class="project-img phone" loading="lazy"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
+                        <img class="project-img web" loading="eager"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
+                        <img class="project-img phone" loading="eager"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
                         <a class="morebutton" href="project/ua911.html">Check it out -></a>   
                     </swiper-slide>
                 </swiper-container>
@@ -482,8 +482,8 @@
                         <a class="morebutton" href="project/lift99-hr.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" loading="lazy" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
-                        <img class="project-img phone" loading="lazy" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img web" loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img phone" loading="eager" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
                         <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
@@ -524,8 +524,8 @@
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
-                        <img class="project-img web" loading="lazy"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
-                        <img class="project-img phone" loading="lazy"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
+                        <img class="project-img web" loading="eager"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
+                        <img class="project-img phone" loading="eager"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
                         <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
@@ -562,8 +562,8 @@
                         <a class="morebutton" href="project/active-mode.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>   
-                        <img class="project-img web" src="assets/Sudoculus app.jpg" alt="App design with full set of icon design for Sudoculus, a math based game">
-                        <img class="project-img phone" src="assets/Sudoculus phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Sudoculus, a math based game"> 
+                        <img class="project-img web" loading="lazy" src="assets/Sudoculus app.jpg" alt="App design with full set of icon design for Sudoculus, a math based game">
+                        <img class="project-img phone" loading="lazy" src="assets/Sudoculus phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Sudoculus, a math based game"> 
                         <a class="morebutton" href="project/sudoculus.html">Check it out -></a>    
                     </swiper-slide>
                     <swiper-slide>
@@ -577,8 +577,8 @@
             <section class="swiper-section logo-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
-                        <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
-                            <img class="logo-img" alt="Custom logo design featuring geometric icon of the AM initials and bold typography for ActiveMode" rel="preload" loading="eager" src="assets/active mode logo.png">
+                        <div class="logo-div" loading="eager" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
+                            <img class="logo-img" loading="eager" alt="Custom logo design featuring geometric icon of the AM initials and bold typography for ActiveMode" rel="preload" loading="eager" src="assets/active mode logo.png">
                         </div>
                         <a class="morebutton" href="project/active-mode.html">Check it out -></a>
                     </swiper-slide>
@@ -701,7 +701,7 @@
                         <img src="assets/bugeyes.jpg" rel="preload" loading="eager" style="background-color: #273128;" class="painting" alt="digital painting of a bug">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/book orb.jpg" loading="eager" style="background-color: #101010;" class="painting" alt="digital painting of a book and an orb">
+                        <img src="assets/book orb.jpg" loading="lazy" style="background-color: #101010;" class="painting" alt="digital painting of a book and an orb">
                     </swiper-slide>
                     <swiper-slide>
                         <img src="assets/skull.jpg" loading="lazy" style="background-color: #222327;" class="painting" alt="digital painting of a skull">
