--- a/website.html
+++ b/website.html
@@ -96,4 +96,4 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="styles.js"></script>
 </body>
-</html>s
+</html>
