--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                 </swiper-container>
             </section>
 
-            <!-- <h1>All projects</h1>
+            <h1>All projects</h1>
             <div class="project-div-container">
                 <div class="project-div-main">
                     <div class="project-uppper-div">
@@ -469,7 +469,7 @@
             </div>
             <div id="pagination" class="pagination-div">
                 <button class="pagination-button" id="next-btn">Load More</button>
-            </div> -->
+            </div>
 
             <h1>Websites</h1>
             <p>Web Design + Webflow Development projects</p>
