--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
-                        <img class="project-img phone" loading="lazy" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img web" loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img phone" loading="eager" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">ZBuzz Ecommerce</p>
@@ -90,8 +90,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy" src="assets/DAO-min.png" style="background: #311742d6;" alt="web design project for a web3 project">
-                        <img class="project-img phone" loading="lazy" src="assets/DAO phone.png" style="background: #311742d6;" alt="web design project for a web3 project">
+                        <img class="project-img web" loading="eager" src="assets/DAO-min.png" style="background: #311742d6;" alt="web design project for a web3 project">
+                        <img class="project-img phone" loading="eager" src="assets/DAO phone.png" style="background: #311742d6;" alt="web design project for a web3 project">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Web3 DAO Project</p>
@@ -101,8 +101,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy" src="assets/M4U web projectr cover.jpg" style="background: white;" alt="web design project for a non-profit organisation">
-                        <img class="project-img phone" loading="lazy" src="assets/M4U phone cover.png" style="background: white;" alt="web design project for a non-profit organisation">
+                        <img class="project-img web" loading="eager" src="assets/M4U web projectr cover.jpg" style="background: white;" alt="web design project for a non-profit organisation">
+                        <img class="project-img phone" loading="eager" src="assets/M4U phone cover.png" style="background: white;" alt="web design project for a non-profit organisation">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Mission for Ukraine</p>
@@ -123,8 +123,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
-                        <img class="project-img phone" loading="lazy"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
+                        <img class="project-img web" loading="eager"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
+                        <img class="project-img phone" loading="eager"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Help99 Initiative</p>
@@ -134,8 +134,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
-                        <img class="project-img phone" loading="lazy"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
+                        <img class="project-img web" loading="eager"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
+                        <img class="project-img phone" loading="eager"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">UA 911 Fundraising</p>
@@ -145,8 +145,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
-                        <img class="project-img phone" loading="lazy"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
+                        <img class="project-img web" loading="eager"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
+                        <img class="project-img phone" loading="eager"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">AAZ Fertilizer Company</p>
@@ -156,8 +156,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
-                        <img class="project-img phone" loading="lazy"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
+                        <img class="project-img web" loading="eager"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
+                        <img class="project-img phone" loading="eager"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Sudoculus Game</p>
@@ -167,8 +167,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
-                        <img class="project-img phone" loading="lazy"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
+                        <img class="project-img web" loading="eager" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
+                        <img class="project-img phone" loading="eager"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Art of Scandinavia</p>
@@ -211,8 +211,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="lazy" src="assets/word puzzle.jpg" alt="App design for a puzzle game">
-                        <img class="project-img phone" loading="lazy" src="assets/puzzle phone.png" alt="App design for a puzzle game">
+                        <img class="project-img web"  src="assets/word puzzle.jpg" alt="App design for a puzzle game">
+                        <img class="project-img phone"  src="assets/puzzle phone.png" alt="App design for a puzzle game">
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Word Puzzle Game</p>
@@ -245,7 +245,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background-image: url('assets/Emuse logo bg.jpg');">
-                            <img class="logo-img" alt="Logo design for EMUSE, minimalistic typographical logo" loading="lazy" src="assets/emuse logo.png">
+                            <img class="logo-img" alt="Logo design for EMUSE, minimalistic typographical logo"  src="assets/emuse logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -256,7 +256,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background-color: #1C1D1D;">
-                            <img class="logo-img" alt="Custom logo design with fluid typography for ZBUZZ" loading="lazy" src="assets/zbuzz logo.png">
+                            <img class="logo-img" alt="Custom logo design with fluid typography for ZBUZZ"  src="assets/zbuzz logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -269,7 +269,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
-                            <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the MU initials and bold typography for Mission 4 Ukraine" loading="lazy" src="assets/m4u logo.png">
+                            <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the MU initials and bold typography for Mission 4 Ukraine"  src="assets/m4u logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -280,7 +280,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background-image: url('assets/Middle litoral logo bg-min.jpg');">
-                            <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the ML initials and bold typography for Middle Litoral, logo in Arabic and English"  loading="lazy"  src="assets/middle litoral logo.png">
+                            <img class="logo-img" alt="Custom logo design featuring abstract geometric icon of the ML initials and bold typography for Middle Litoral, logo in Arabic and English"    src="assets/middle litoral logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -291,7 +291,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background-color: #1D315C;">
-                            <img class="logo-img" alt="Logo design with an icon of AAZ initials" loading="lazy" src="assets/aaz trading co logo.png">
+                            <img class="logo-img" alt="Logo design with an icon of AAZ initials"  src="assets/aaz trading co logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -302,7 +302,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background-image: url('assets/Charm of the elements logo bg-min.jpg');">
-                            <img class="logo-img" alt="Charm of the elements logo design, minimalistic logo" loading="lazy" src="assets/charm of  the elements logo.png">
+                            <img class="logo-img" alt="Charm of the elements logo design, minimalistic logo"  src="assets/charm of  the elements logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -312,8 +312,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <div class="logo-div" style="background-image: url('assets/Katia G Saade logo bg-min.jpg');">
-                            <img class="logo-img" alt="Katia G Saade logo design for an architect" loading="lazy" src="assets/katia g saade logo.png">
+                        <div class="logo-div" style="background-color: #37528e;" >
+                            <img class="logo-img" alt="Katia G Saade logo design for an architect"  src="assets/katia g saade logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -324,7 +324,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background-image: url('assets/Gallivanters log logo bg-min.jpg');">
-                            <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log" loading="lazy" src="assets/galivanter log logo highlighted.png" style="max-width: 500px;">
+                            <img class="logo-img" alt="Custom logo design options circular designs in different design styles for Galivanter's Log"  src="assets/galivanter log logo highlighted.png" style="max-width: 500px;">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -335,7 +335,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
-                            <img class="logo-img" alt="Custom logo design featuring abstract geometric typography for DEPO" loading="lazy" src="assets/depo logo.png">
+                            <img class="logo-img" alt="Custom logo design featuring abstract geometric typography for DEPO"  src="assets/depo logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
@@ -346,7 +346,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <div class="logo-div" style="background: #FFFCF3;">
-                            <img class="logo-img" alt="paragliding logo design in Arabic text" loading="lazy" src="assets/paragliding logo.png">
+                            <img class="logo-img" alt="paragliding logo design in Arabic text"  src="assets/paragliding logo.png">
                         </div>
                     </div>
                     <div class="project-lower-div">
