--- a/portfolio.html
+++ b/portfolio.html
@@ -471,9 +471,9 @@
                 <button class="pagination-button" id="next-btn">Load More</button>
             </div>
 
-            <h1>Websites</h1>
+            <!-- <h1>Websites</h1>
             <p>Web Design + Webflow Development projects</p>
-            <p class="swipe"><-- swipe for more  --></p>
+            <p class="swipe">< -- swipe for more  -- ></p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>   
@@ -499,7 +499,7 @@
                 </swiper-container>
             </section>
             <p>Webflow Development projects</p>
-            <p class="swipe"><-- swipe for more  --></p>
+            <p class="swipe">< -- swipe for more  -- ></p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
@@ -520,7 +520,7 @@
                 </swiper-container>
             </section>
             <p>Web Design projects</p>
-            <p class="swipe"><-- swipe for more  --></p>
+            <p class="swipe">< -- swipe for more  -- ></p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
@@ -541,7 +541,7 @@
                 </swiper-container>
             </section>
             <p>Web Design + Web Coding projects</p>
-            <p class="swipe"><-- swipe for more  --></p>
+            <p class="swipe">< -- swipe for more  -- ></p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
@@ -553,7 +553,7 @@
             </section>    
             <h1>App design</h1>
             <p>#App Design  #Icon Design</p>
-            <p class="swipe"><-- swipe for more  --></p>
+            <p class="swipe">< -- swipe for more  -- ></p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
@@ -573,7 +573,7 @@
                 </swiper-container>
             </section>
             <h1>Logo design</h1>
-            <p class="swipe"><-- swipe for more  --></p>
+            <p class="swipe">< -- swipe for more  -- ></p>
             <section class="swiper-section logo-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
@@ -691,10 +691,11 @@
                         </div>
                     </swiper-slide>
                 </swiper-container>
-            </section>
+            </section> -->
+
             <h2>*Other*</h1>
             <h1>Digital painting</h1>
-            <p class="swipe"><-- swipe for more  --></p>
+            <p class="swipe">< -- swipe for more  -- ></p>
             <section class="swiper-section painting">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
