--- a/portfolio.html
+++ b/portfolio.html
@@ -68,8 +68,8 @@
             <div class="project-div-container">
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web"  rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
-                        <img class="project-img phone" rel="preload" loading="eager" src="assets/hr phone.png" style="background: #253946d1;" alt="web design project for an HR company">  
+                        <img class="project-img "  rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
+                        <!-- <img class="project-img phone" rel="preload" loading="eager" src="assets/hr phone.png" style="background: #253946d1;" alt="web design project for an HR company">   -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">LIFT99 HR platform</p>
@@ -79,8 +79,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
-                        <img class="project-img phone" loading="eager" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img " loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <!-- <img class="project-img phone" loading="eager" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">ZBuzz Ecommerce</p>
