--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,10 @@
     <div class="bigger-container">
         <div class="container">
             <div class="section">
+                <h1>My portfolio</h1>
+            </div>
+
+            <div class="section">
                 <h1>Highlighted</h1>
                 <p>My favourite work</p>
                 <p class="swipe"><-- swipe for more  --></p>
