--- a/portfolio.html
+++ b/portfolio.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="project-div-main">
                         <div class="project-uppper-div">
-                            <img class="project-img web"  src="assets/word puzzle.jpg" alt="App design for a puzzle game">
+                            <img class="project-img" src="assets/word puzzle.jpg" alt="App design for a puzzle game">
                             <!-- <img class="project-img phone"  src="assets/puzzle phone.png" alt="App design for a puzzle game"> -->
                         </div>
                         <div class="project-lower-div">
