--- a/portfolio.html
+++ b/portfolio.html
@@ -308,7 +308,7 @@
                     </div>
                     <div class="project-div-main">
                         <div class="project-uppper-div">
-                            <div class="logo-div" style="background-image: url('assets/Charm of the elements logo bg-min.jpg');">
+                            <div class="logo-div" style="background-image: url('assets/Charm of the elements logo bg-min.jpg'); max-width: 70vw;">
                                 <img class="logo-img" alt="Charm of the elements logo design, minimalistic logo"  src="assets/charm of  the elements logo.png">
                             </div>
                         </div>
